change keyboard drawer settings

--- a/keymap_drawer.config.yaml
+++ b/keymap_drawer.config.yaml
@@ -22,38 +22,14 @@ draw_config:
       font-size: 12px;
       font-weight: bold;
       text-rendering: optimizeLegibility;
-      /* No background-color! Let it inherit */
-    }
-
-    /* Key background */
-    rect.key {
-      fill: #2c2c2c;
-      stroke: #555;
-    }
-
-    /* FORCING ALL visible elements to be light iron color */
-    text, 
-    path, 
-    .combo text, 
-    .sym_sub_text, 
-    .tap_dance, 
-    .toggle, 
-    .sym_by_sym, 
-    .combo.sym_by_sym {
-      fill: #d2d6da;
     }
 
     /* Color accent for held keys */
     rect.held, rect.combo.held {
-      fill: #3c5d99;
+        fill: #ffc;
     }
 
-    /* Combo background */
-    rect.combo {
-      fill: #3a3a3a;
-      stroke: #666;
-    }
-
+    /* Technique borrowed and extended from https://github.com/englmaxi/zmk-config/blob/master/keymap-drawer/config.yaml */
     .sym_sub_text.tap {
       translate: -5px 2px;
       font-size: 20px;
@@ -72,6 +48,7 @@ draw_config:
       opacity: 1.0;
     }
 
+    /* Toggle */
     .toggle.shifted {
       translate: -10px 12px;
     }
@@ -80,6 +57,7 @@ draw_config:
       translate: 13px -23px;
     }
 
+    /* Variant for tap-dances */
     .tap_dance.tap {
       translate: -7px 0px;
       font-size: 12px;
@@ -90,6 +68,7 @@ draw_config:
       opacity: 1.0;
     }
 
+    /* Variant for symbol next to symbol */
     .sym_by_sym.tap {
       translate: -6px 0px;
     }
@@ -110,6 +89,7 @@ draw_config:
       visibility: hidden;
     }
 
+    /* hide hold box for combo sym_by_sym */
     .combo.sym_by_sym.hold > path[stroke="none"][fill="none"] {
       visibility: hidden;
     }
