add dongle shield

--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -16,3 +16,7 @@ CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_ON_START=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=100
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+
+# DONGLE
+CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
+CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=100
