--- a/build.yaml
+++ b/build.yaml
@@ -9,3 +9,5 @@ include:
     artifact-name: eyelash_sofle_studio_left
   - board: eyelash_sofle_left
     shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: sofle_dongle prospector_adapter
