--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,8 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: m165437
       url-base: https://github.com/M165437
+    - name: carrefinho
+      url-base: https://github.com/carrefinho
   projects:
     - name: eyelash_sofle
       url: https://github.com/mateusfdl/zmk-sofle-v2
@@ -14,6 +16,9 @@ manifest:
       import: app/west.yml
     - name: nice-view-gem
       remote: m165437
+      revision: main
+    - name: prospector-zmk-module
+      remote: carrefinho
       revision: main
   self:
     path: boards
