--- a/boards/shields/eyelash_sofle_dongle/eyelash_sofle_dongle.conf
+++ b/boards/shields/eyelash_sofle_dongle/eyelash_sofle_dongle.conf
@@ -4,6 +4,12 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_POINTING=y
 
+# Dongle doesn't have physical backlight
+CONFIG_ZMK_BACKLIGHT=n
+
+# Dongle doesn't have physical encoder
+CONFIG_EC11=n
+
 # Prospector display settings
 CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
 CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=100
